<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3f008a"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo1"
        android:layout_width="397dp"
        android:layout_height="263dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087"
        app:srcCompat="@drawable/simply"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/txtBilgi"
        android:layout_width="167dp"
        android:layout_height="20dp"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/text1"
        android:textSize="11sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo1"
        app:layout_constraintVertical_bias="0.034" />

    <EditText
        android:id="@+id/txtAcc"
        android:layout_width="224dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/yaziarkaplanlari"
        android:ems="10"
        android:textColor="@color/black"
        android:hint="@string/kadi"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:fontFamily="@font/francois_one"
        android:textSize="16sp"
        android:textColorHint="#757575"
        android:drawableStart="@drawable/acclogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtBilgi"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="@+id/txtBilgi"
        app:layout_constraintTop_toBottomOf="@+id/txtBilgi"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="224dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/yaziarkaplanlari"
        android:drawableStart="@drawable/passlogo"
        android:ems="10"
        android:textColor="@color/black"
        android:hint="@string/sifre"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:fontFamily="@font/francois_one"
        android:textSize="16sp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtAcc"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtAcc"
        app:layout_constraintTop_toBottomOf="@+id/txtAcc"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnGirisYap"
        android:layout_width="224dp"
        android:layout_height="61dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/butonarkaplan"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/btnLogin"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtPass"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtPass"
        app:layout_constraintTop_toBottomOf="@+id/txtPass"
        app:layout_constraintVertical_bias="0.083" />

    <TextView
        android:id="@+id/txtForgetPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/mouse_memoirs"
        android:text="@string/txtForgetPass"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnGirisYap"
        app:layout_constraintStart_toStartOf="@+id/btnGirisYap"
        app:layout_constraintTop_toBottomOf="@+id/btnGirisYap"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtCreateAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/mouse_memoirs"
        android:text="@string/txtCreateAcc"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtForgetPass"
        app:layout_constraintVertical_bias="0.577" />

</androidx.constraintlayout.widget.ConstraintLayout>