<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3f008a"
    tools:context=".SifreUActivity">

    <TextView
        android:id="@+id/txtGiriseDon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/mouse_memoirs"
        android:text="@string/txtGeriDon"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.884" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSaveKaydet"
        app:layout_constraintVertical_bias="0.402" />

    <Button
        android:id="@+id/btnSaveKaydet"
        android:layout_width="224dp"
        android:layout_height="61dp"
        android:background="@drawable/butonarkaplan"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/txtKaydet"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSavePass"
        app:layout_constraintVertical_bias="0.229" />

    <EditText
        android:id="@+id/txtSaveMail"
        android:layout_width="224dp"
        android:layout_height="51dp"
        android:autofillHints=""
        android:background="@drawable/yaziarkaplanlari"
        android:drawableStart="@drawable/mail"
        android:ems="10"
        android:fontFamily="@font/francois_one"
        android:hint="@string/txtMail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo2"
        app:layout_constraintVertical_bias="0.061" />

    <EditText
        android:id="@+id/txtSavePass"
        android:layout_width="224dp"
        android:layout_height="51dp"
        android:autofillHints=""
        android:background="@drawable/yaziarkaplanlari"
        android:drawableStart="@drawable/passlogo"
        android:ems="10"
        android:fontFamily="@font/francois_one"
        android:hint="@string/txtNewPass"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSaveKod"
        app:layout_constraintVertical_bias="0.06" />

    <Button
        android:id="@+id/btnSaveKodG"
        android:layout_width="53dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/butonarkaplan"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/btnKodGonder"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtSaveMail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.393"
        app:layout_constraintStart_toEndOf="@+id/txtSaveMail"
        app:layout_constraintTop_toTopOf="@+id/txtSaveMail"
        app:layout_constraintVertical_bias="0.333" />

    <EditText
        android:id="@+id/txtSaveKod"
        android:layout_width="224dp"
        android:layout_height="51dp"
        android:autofillHints=""
        android:background="@drawable/yaziarkaplanlari"
        android:drawableStart="@drawable/mail"
        android:ems="10"
        android:fontFamily="@font/francois_one"
        android:hint="@string/txtKod"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSaveMail"
        app:layout_constraintVertical_bias="0.044" />

    <ImageView
        android:id="@+id/logo2"
        android:layout_width="397dp"
        android:layout_height="263dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126"
        app:srcCompat="@drawable/simply" />

</androidx.constraintlayout.widget.ConstraintLayout>