<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#3f008a"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/txtGoToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mouse_memoirs"
        android:text="@string/txtGoToLogin"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.428" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnKayitOl"
        app:layout_constraintVertical_bias="0.258" />

    <Button
        android:id="@+id/btnKayitOl"
        android:layout_width="224dp"
        android:layout_height="61dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/butonarkaplan"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/txtRegister"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMail"
        app:layout_constraintVertical_bias="0.22" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="398dp"
        android:layout_height="228dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.097"
        app:srcCompat="@drawable/simply" />

    <EditText
        android:id="@+id/txtKayitAcc"
        android:layout_width="224dp"
        android:layout_height="51dp"
        android:autofillHints=""
        android:background="@drawable/yaziarkaplanlari"
        android:drawableStart="@drawable/acclogo"
        android:ems="10"
        android:fontFamily="@font/francois_one"
        android:hint="@string/kadi"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.046" />

    <EditText
        android:id="@+id/txtKayitPassAgain"
        android:layout_width="224dp"
        android:layout_height="51dp"
        android:layout_marginTop="5dp"
        android:autofillHints=""
        android:background="@drawable/yaziarkaplanlari"
        android:drawableStart="@drawable/passlogo"
        android:ems="10"
        android:fontFamily="@font/francois_one"
        android:textSize="16sp"
        android:hint="@string/txtPassAgain"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtKayitPass"
        app:layout_constraintVertical_bias="0.021" />

    <EditText
        android:id="@+id/txtKayitPass"
        android:layout_width="224dp"
        android:layout_height="51dp"
        android:layout_marginTop="1dp"
        android:autofillHints=""
        android:background="@drawable/yaziarkaplanlari"
        android:drawableStart="@drawable/passlogo"
        android:ems="10"
        android:fontFamily="@font/francois_one"
        android:textSize="16sp"
        android:hint="@string/sifre"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtKayitAcc"
        app:layout_constraintVertical_bias="0.027" />

    <EditText
        android:id="@+id/txtMail"
        android:layout_width="224dp"
        android:layout_height="51dp"
        android:layout_marginTop="5dp"
        android:autofillHints=""
        android:background="@drawable/yaziarkaplanlari"
        android:drawableStart="@drawable/mail"
        android:ems="10"
        android:fontFamily="@font/francois_one"
        android:textSize="16sp"
        android:hint="@string/txtMail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtKayitPassAgain"
        app:layout_constraintVertical_bias="0.035" />
</androidx.constraintlayout.widget.ConstraintLayout>